# python_Djangto_dz2

./: README.md  pyproject.toml
catalog/: urls.py  views.py
config/: settings.py  urls.py
